# Conveyor

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotModeDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
devel/include/wsg_50_common/: Cmd.h  Conf.h  ConfRequest.h  ConfResponse.h  Incr.h  IncrRequest.h  IncrResponse.h  Move.h  MoveRequest.h  MoveResponse.h  Status.h
devel/lib/extrinsic_calibration/: calculation_of_R_and_T  convert_point_from_base_link_to_wrist2_link  convert_point_from_depth_optical_frame_to_camera_link  error_calculation  record_video  store_markers_wrt_base_link  store_points_wrt_kinect
devel/lib/pkgconfig/: extrinsic_calibration.pc  realsense2_description.pc  robot_control.pc  save_to_file.pc  trac_ik_examples.pc  trac_ik_kinematics_plugin.pc  trac_ik_lib.pc  trac_ik_python.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_modern_driver.pc  ur_msgs.pc  wsg_50_common.pc  wsg_50_driver.pc  wsg_50_simulation.pc
devel/lib/robot_control/: moveit_tutorial
devel/lib/save_to_file/: save_data  save_hjb
devel/lib/trac_ik_examples/: ik_tests
devel/lib/wsg_50_driver/: wsg_50_ip
devel/lib/wsg_50_simulation/: wsg_50_sim_driver  wsg_50_sim_keyboard_teleop
devel/share/extrinsic_calibration/cmake/: extrinsic_calibrationConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/robot_control/cmake/: robot_controlConfig.cmake
devel/share/save_to_file/cmake/: save_to_fileConfig.cmake
devel/share/trac_ik_examples/cmake/: trac_ik_examplesConfig.cmake
devel/share/trac_ik_kinematics_plugin/cmake/: trac_ik_kinematics_pluginConfig.cmake
devel/share/trac_ik_lib/cmake/: trac_ik_libConfig.cmake
devel/share/trac_ik_python/cmake/: trac_ik_pythonConfig.cmake
devel/share/ur10_e_moveit_config/cmake/: ur10_e_moveit_configConfig.cmake
devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
devel/share/ur3_e_moveit_config/cmake/: ur3_e_moveit_configConfig.cmake
devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
devel/share/ur5_e_moveit_config/cmake/: ur5_e_moveit_configConfig.cmake
devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
src/: .rosinstall  .rosinstall.bak  CMakeLists.txt.user.4.8-pre1
src/extrinsic_calibration/: CMakeLists.txt  Steps_for_calibration.txt  camera_callibration.txt
src/extrinsic_calibration/data_files/: final_R_and_T.txt  kinect_points_wrt_camera_link.txt  marker_coordinates_wrt_base_link.txt  marker_coordinates_wrt_wrist2_link.txt  points_wrt_kinnect.txt
src/extrinsic_calibration/src/: board_pose.cpp  calculation_of_R_and_T.cpp  convert_point_from_base_link_to_wrist2_link.cpp  convert_point_from_depth_optical_frame_to_camera_link.cpp  error_calculation.cpp  record_video.cpp  store_markers_wrt_base_link.cpp  store_points_wrt_kinect.cpp  test_transformation.cpp  visualize_marker_from_kinect.cpp  visualize_marker_from_robot.cpp
src/save_to_file/src/: save_data.cpp  save_hjb.cpp
src/ur_modern_driver/config/: ur10_controllers.yaml
src/ur_modern_driver/launch/: ur10_ros_control.launch  ur10_ros_control_vel.launch
(+62 files in other folders)
